== Version 2.6.11 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # A warning is now displayed if the settings 'SITE_DOMAIN' is not correctly defined
      (this feature has been backported from Creme 2.7).
    # Filtering with the field 'role' of a user was broken.
    # The migrations from Creme 2.5 were crashing if a filter references a Property Type
      which has been removed. The invalid conditions are now deleted, & you should
      fix/remove the concerned filter.
    # Apps:
        * Billing :
            - The definitive deletion has been fixed: it did not work with lines
              related to Product/Service instances.
        * Assistants:
            - The dynamic trigger dates of Alerts were not always updated during an entities merging.
            - The URLs to entities in the HTML body of notification emails are now absolute.
        * Emails:
            - The URLs to entities in the HTML body of notification emails
              (when a campaign has been sent) are now absolute.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The EmptyEnumerator fallback now either raises an exception (ENUMERABLE_REGISTRATION_ERROR=True) or logs an error.
          This change is done to prevent issues with empty select when an enumerator is not correctly configured.
        # Fix an issue when an event 'end' is null during drag-n-drop (allday events).
        # Fix calendar eventTimeFormat & slotLabelFormat issues : 24h rendered as 12h, wrong datetime or date ranges.


== Version 2.6.10 ==

  Users side :
  ------------
    # A crash in the job scheduler (command "creme_job_manager") has been fixed.
    # Apps :
        * Emails :
            - The help text for signatures' images has been improved.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------